# vmxethproxy

./: .gitmodules  CMakeLists.txt
.github/scripts/: gcovr-summary-to-md.py
.github/workflows/: build.yml  clang-format.yml
data/: config-midi-list.json  config-sample.json
src/: config-macros.h.in  misc.cc  misc.h  proxycore-internal.hh  proxycore.cc  proxycore.h  socket-moderator.cc  socket-moderator.h  vmxethproxy.cc  vmxethproxy.h  vmxhost-dummy.cc  vmxhost-dummy.h  vmxhost-midi.cc  vmxhost.cc  vmxhost.h  vmxinstance-list.h  vmxinstance.h  vmxmonitor.cc  vmxmonitor.h  vmxpacket-identify.cc  vmxpacket-identify.h  vmxpacket-str.cc  vmxpacket.cc  vmxpacket.h  vmxprop.cc  vmxprop.h  vmxserver-client.cc  vmxserver-client.h  vmxserver.cc  vmxserver.h  vmxws.cc  vmxws.h
test/: CMakeLists.txt  rangeset_test.cc  run-autoport.sh  run-dummy.sh  vmxpacket_test.cc  ws.py
test/cmocka/: CMakeLists.txt  internal_proxycore.cc  test_misc.cc  test_vmxhost_midi.cc  test_vmxpacket_str.cc
test/data/: autodiscovery.json  config-invalid.json  invalid-id-1.json  invalid-id.json  local-secondary.json  local-ws.json  server-dummy-autoport.json  server-dummy.json
util/: os_gettime.c  platform.h  rangeset.h
